--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,5 @@ BOT_ACTIVITY="Lavamusic"           # Your bot activity.
 AUTO_NODE="false"                  # true for auto node. It is given from lavainfo-api (https://lavainfo-api.deno.dev).
 SEARCH_ENGINE="YouTubeMusic"       # Search engine to be used when playing the song. You can use: YouTube, YouTubeMusic, SoundCloud, Spotify, Apple, Deezer, Yandex and JioSaavn
 GENIUS_API=""                      # Sign up and get your own api at (https://genius.com/) to fetch your lyrics (CLIENT TOKEN)
+IDLE_IN_CHANNEL=-1                 # The time the bot stays in the channel in seconds. -1 is infinite
 NODES=[{"id":"Local Node","host":"lavalink","port":2333,"authorization":"youshallnotpass","retryAmount":5,"retryDelay":60000,"secure":"false"}]
