--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "pg": "^8.16.3",
     "signale": "^1.4.0",
     "topgg-autoposter": "^2.0.2",
+    "transliteration": "^2.6.1",
     "tslib": "^2.8.1",
     "undici": "^7.18.0",
     "zod": "^4.3.5"
